<resources>
    <string name="email_address">Email address</string>
    <string name="verification_code">Verification code</string>
    <string name="invalid_verification_code">Invalid verification code</string>
    <string name="send_link">Send link</string>
    <string name="send_link_by_email">Send link by email</string>
    <string name="create_account">Create account</string>
    <string name="send_verification_email">Send verification email</string>
    <string name="enter_your_password_instead">Enter your password instead</string>
    <string name="or_type_your_password">Or type your password</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="help">Help</string>
    <string name="log_in">Log In</string>
    <string name="enter_email_wordpress_com">Log in to WordPress.com using an email address to manage all your WordPress sites.</string>
    <string name="enter_email_to_continue_wordpress_com">Enter your email address to log in or create a WordPress.com account.</string>
    <string name="enter_email_for_site">Log in with WordPress.com to connect to %1$s</string>
    <string name="enter_credentials_for_site">Log in with your %1$s site credentials</string>
    <string name="enter_account_info_for_site">Enter your account information for %1$s.</string>
    <string name="get_started">Get Started</string>
    <string name="next">Next</string>
    <string name="open_mail">Open mail</string>
    <string name="check_email">Check email</string>
    <string name="alternatively">Alternatively:</string>
    <string name="enter_site_address_instead">Log in by entering your site address.</string>
    <string name="enter_site_credentials_instead">Log in with site credentials.</string>
    <string name="enter_username_instead">Log in with your username.</string>
    <string name="enter_verification_code">Almost there! Please enter the verification code from your Authenticator app.</string>
    <string name="enter_verification_code_sms">We sent a text message to the phone number ending in %s. Please enter the verification code in the SMS.</string>
    <string name="login_text_otp">Text me a code instead</string>
    <string name="login_text_otp_another">Text me another code instead</string>
    <string name="requesting_otp">Requesting a verification code via SMS.</string>
    <string name="email_not_registered_wpcom">Hmm, we can\'t find a WordPress.com account connected to this email address.</string>
    <string name="password_incorrect">It looks like this password is incorrect. Please double check your information and try again.</string>
    <string name="login_magic_links_label">We\'ll email you a link that\'ll log you in instantly, no password needed.</string>
    <string name="login_site_credentials_magic_link_label">Almost there! We just need to verify your Jetpack connected email address &lt;b>%1$s&lt;/b></string>
    <string name="login_magic_links_sent_label">Check your email on this device and tap the link in the email you received from WordPress.com.</string>
    <string name="login_magic_link_email_requesting">Requesting log-in email</string>
    <string name="magic_link_not_seeing_email_message">Not seeing the email? Check your Spam or Junk Mail folder.</string>
    <string name="magic_link_unavailable_error_message">Currently unavailable. Please enter your password</string>
    <string name="login_get_link_by_email">Get a login link by email</string>
    <string name="enter_wpcom_password">Enter your WordPress.com password.</string>
    <string name="enter_wpcom_password_google">To proceed with this Google account, please provide the matching WordPress.com password. This will be asked only once.</string>
    <string name="connect_more">Connect another site</string>
    <string name="connect_site">Connect a site</string>
    <string name="login_continue">Continue</string>
    <string name="login_done">Done</string>
    <string name="login_already_logged_in_wpcom">Already logged in to WordPress.com</string>
    <string name="enter_site_address">Enter the address of the WordPress site you\'d like to connect.</string>
    <string name="enter_site_address_share_intent">Enter the address of your WordPress site you\'d like to share the content to.</string>
    <string name="login_site_address">Site address</string>
    <string name="login_site_address_help">Need help finding your site address?</string>
    <string name="login_site_address_help_title">What\'s my site address?</string>
    <string name="login_site_address_help_content">Your site address appears in the bar at the top of the screen when you visit your site in Chrome.</string>
    <string name="login_site_address_more_help">Need more help?</string>
    <string name="login_find_your_site_adress">Find your site address</string>
    <string name="login_find_your_connected_email">Find your connected email</string>
    <string name="login_checking_site_address">Checking site address</string>
    <string name="login_error_while_adding_site">Error while adding site. Error code: %s</string>
    <string name="login_log_in_for_deeplink">Log in to WordPress.com to access the post.</string>
    <string name="login_log_in_for_share_intent">Log in to WordPress.com to share the content.</string>
    <string name="login_invalid_site_url">Please enter a complete website address, like example.com.</string>
    <string name="login_empty_username">Please enter a username</string>
    <string name="login_empty_password">Please enter a password</string>
    <string name="login_empty_2fa">Please enter a verification code</string>
    <string name="login_email_button_signup">Don\'t have an account? %1$sSign up%2$s</string>
    <string name="login_email_client_not_found">Can\'t detect your email client app</string>
    <string name="login_google_button_suffix">Log in with Google.</string>
    <string name="continue_google_button_suffix">Continue with Google</string>
    <string name="continue_site_credentials">Continue with store credentials</string>
    <string name="login_or">or</string>
    <string name="login_error_button">Close</string>
    <string name="login_error_email_not_found_v2">There\'s no WordPress.com account matching this Google account.</string>
    <string name="login_error_generic">There was some trouble connecting with the Google account.</string>
    <string name="login_error_sms_throttled">We\'ve made too many attempts to send an SMS verification code — take a break, and request a new one in a minute.</string>
    <string name="login_error_generic_start">Google login could not be started.</string>
    <string name="login_error_suffix">\nMaybe try a different account?</string>
    <string name="sign_up_label">Sign Up</string>
    <string name="sign_up">Sign Up for WordPress.com</string>
    <string name="signup_email_error_generic">There was some trouble checking the email address.</string>
    <string name="signup_email_header">To create your new WordPress.com account, please enter your email address.</string>
    <string name="signup_magic_link_error">There was some trouble sending the email. You can retry now or close and try again later.</string>
    <string name="signup_magic_link_error_button_negative">Close</string>
    <string name="signup_magic_link_error_button_positive">Retry</string>
    <string name="signup_magic_link_message">We’ve emailed you a signup link to create your new WordPress.com account. Check your email on this device, and tap the link in the email you receive from WordPress.com.</string>
    <string name="signup_magic_link_progress">Sending email</string>
    <string name="signup_confirmation_message">We’ll use this email address to create your new WordPress.com account.</string>
    <string name="signup_confirmation_magic_link_message">We’ll email you a signup link to create your new WordPress.com account.</string>
    <string name="signup_terms_of_service_text">By signing up, you agree to our %1$sTerms of Service%2$s.</string>
    <string name="continue_terms_of_service_text">By continuing, you agree to our %1$sTerms of Service%2$s.</string>
    <string name="continue_with_google_terms_of_service_text">If you continue with Google and don\'t already have a WordPress.com account, you are creating an account and you agree to our %1$sTerms of Service%2$s.</string>
    <string name="signup_with_email_button">Sign Up with Email</string>
    <string name="signup_with_google_button">Sign Up with Google</string>
    <string name="signup_with_google_progress">Signing up with Google&#8230;</string>
    <string name="continue_with_wpcom">Continue with WordPress.com</string>
    <string name="enter_your_site_address">Enter your existing site address</string>
    <string name="google_error_timeout">Google took too long to respond. You may need to wait until you have a stronger internet connection.</string>
    <string name="username_or_password_incorrect">The username or password you entered is incorrect</string>
    <string name="cannot_add_duplicate_site">This site already exists in the app, you can\'t add it.</string>
    <string name="duplicate_site_detected">A duplicate site has been detected.</string>
    <string name="error_fetch_my_profile">Couldn\'t retrieve your profile</string>
    <string name="error_disabled_apis">Could not fetch settings: Some APIs are unavailable for this OAuth app ID + account combination.</string>
    <string name="login_to_to_connect_jetpack">Log in to the WordPress.com account you used to connect Jetpack.</string>
    <string name="auth_required">Log in again to continue.</string>
    <string name="checking_email">Checking email</string>
    <string name="email_invalid">Enter a valid email address</string>
    <string name="error_user_username_instead_of_email">Please log in using your WordPress.com username instead of your email address.</string>
    <string name="logging_in">Logging in</string>
    <string name="forgot_password">Lost your password?</string>
    <string name="reset_your_password">Reset your password</string>
    <string name="error_generic">An error occurred</string>
    <string name="no_site_error">The site at this address is not a WordPress site. For us to connect to it, the site must use WordPress.</string>
    <string name="invalid_site_url_message">Check that the site URL entered is valid</string>
    <string name="xmlrpc_missing_method_error">Couldn\'t connect. Required XML-RPC methods are missing on the server.</string>
    <string name="xmlrpc_post_blocked_error">Couldn\'t connect. Your host is blocking POST requests, and the app needs
        that in order to communicate with your site. Contact your host to solve this problem.</string>
    <string name="xmlrpc_endpoint_forbidden_error">Couldn\'t connect. We received a 403 error when trying to access your
        site XMLRPC endpoint. The app needs that in order to communicate with your site. Contact your host to solve
        this problem.</string>
    <string name="login_discovery_error_xmlrpc">We were unable to access the &lt;b>XMLRPC file&lt;/b> on your site. You will need to reach out to your host to resolve this.</string>
    <string name="login_discovery_error_http_auth">We were unable to access your site because it requires &lt;b>HTTP Authentication&lt;/b>. You will need to reach out to your host to resolve this.</string>
    <string name="login_discovery_error_ssl">We were unable to access your site because of a problem with the &lt;b>SSL Certificate&lt;/b>. You will need to reach out to your host to resolve this.</string>
    <string name="login_discovery_error_generic">We were unable to access your site. You will need to reach out to your host to resolve this.</string>
    <string name="enter_wpcom_or_jetpack_site">Please enter a WordPress.com or Jetpack-connected self-hosted WordPress site</string>
</resources>