<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingEnd="@dimen/margin_extra_large"
    android:paddingStart="@dimen/margin_extra_large">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/label"
        style="@style/Widget.LoginFlow.TextView.Label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_extra_large"
        tools:text="@string/enter_site_address" />

    <org.wordpress.android.login.widgets.WPLoginInputRow
        android:id="@+id/login_site_address_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_site_address"
        android:imeOptions="actionNext"
        android:inputType="textUri" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_site_address_help_button"
        style="@style/Widget.LoginFlow.Button.Tertiary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="@dimen/margin_none"
        android:paddingStart="@dimen/margin_none"
        android:text="@string/login_find_your_site_adress" />
</LinearLayout>
