<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <include layout="@layout/toolbar_login" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="@dimen/magic_link_sent_illustration_sz"
        android:layout_height="@dimen/magic_link_sent_illustration_sz"
        android:layout_marginTop="@dimen/margin_extra_extra_large"
        android:contentDescription="@null"
        android:scaleType="centerInside"
        app:srcCompat="@drawable/login_email_alert" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/label"
        style="@style/Widget.LoginFlow.TextView.Label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/margin_extra_large"
        android:text="@string/login_magic_links_sent_label" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_open_email_client"
        style="@style/Widget.LoginFlow.Button.Primary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_extra_large"
        android:text="@string/open_mail" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_enter_password"
        style="@style/Widget.LoginFlow.Button.Tertiary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_extra_extra_extra_large"
        android:text="@string/enter_your_password_instead" />

</LinearLayout>
