<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/grey_lighten_30"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:paddingBottom="@dimen/margin_extra_large"
    android:paddingLeft="@dimen/margin_extra_large"
    android:paddingRight="@dimen/margin_extra_large"
    android:paddingTop="@dimen/margin_medium" >

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signup_tos"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:padding="@dimen/margin_extra_large"
        android:text="@string/signup_terms_of_service_text"
        style="@style/LoginTheme.Button.Secondary" >
    </androidx.appcompat.widget.AppCompatButton>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signup_email"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_extra_small"
        android:layout_width="match_parent"
        android:text="@string/signup_with_email_button"
        android:theme="@style/LoginTheme.Button" >
    </androidx.appcompat.widget.AppCompatButton>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signup_google"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_extra_small"
        android:layout_width="match_parent"
        android:text="@string/signup_with_google_button"
        android:theme="@style/LoginTheme.Button" >
    </androidx.appcompat.widget.AppCompatButton>

</LinearLayout>
