<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingEnd="@dimen/margin_extra_large"
    android:paddingStart="@dimen/margin_extra_large">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/label"
        style="@style/Widget.LoginFlow.TextView.Label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_extra_large"
        tools:text="Enter your account information for pamelanguyen.com." />

    <org.wordpress.android.login.widgets.WPLoginInputRow
        android:id="@+id/login_username_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:imeOptions="actionNext"
        android:inputType="textPersonName" />

    <org.wordpress.android.login.widgets.WPLoginInputRow
        android:id="@+id/login_password_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_extra_large"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:passwordToggleEnabled="true" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_reset_password"
        style="@style/Widget.LoginFlow.Button.Tertiary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="@dimen/margin_none"
        android:paddingStart="@dimen/margin_none"
        android:text="@string/reset_your_password" />

</LinearLayout>
