<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar_login" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/margin_extra_large">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/signup_magic_link_label"
                style="@style/Widget.LoginFlow.TextView.Label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signup_magic_link_message" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/Widget.LoginFlow.TextView.Label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_extra_medium_large"
                android:text="@string/magic_link_not_seeing_email_message" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/Widget.LoginFlow.TextView.Label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_extra_medium_large"
                android:text="@string/magic_link_not_meaning_to_create_account" />

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signup_magic_link_button"
        style="@style/Widget.LoginFlow.Button.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_medium_large"
        android:layout_marginEnd="@dimen/margin_extra_large"
        android:layout_marginStart="@dimen/margin_extra_large"
        android:layout_marginTop="@dimen/margin_medium_large"
        android:text="@string/check_email" />

</LinearLayout>
