<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/margin_extra_large"
    android:orientation="vertical"
    android:paddingStart="@dimen/margin_extra_large"
    android:paddingLeft="@dimen/margin_extra_large"
    android:paddingEnd="@dimen/margin_extra_large"
    android:paddingRight="@dimen/margin_extra_large">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/label"
        style="@style/LoginTheme.TextLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_extra_large"
        android:layout_marginBottom="@dimen/margin_extra_large"
        android:gravity="start"
        android:textAlignment="viewStart"
        tools:text="@string/enter_site_address" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/login_email_icon"
            style="@style/LoginTheme.TextLabel.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            app:srcCompat="@drawable/ic_user_grey_24dp" />

        <LinearLayout
            android:id="@+id/login_email_label_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_extra_large"
            android:focusable="true"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                style="@style/LoginTheme.InputLabelStatic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/email_address"
                android:textAlignment="viewStart" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/login_email"
                style="@style/LoginTheme.TextLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:textAlignment="viewStart"
                tools:text="s@b.com" />
        </LinearLayout>
    </LinearLayout>

    <org.wordpress.android.login.widgets.WPLoginInputRow
        android:id="@+id/login_password_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_extra_large"
        android:layout_marginBottom="@dimen/margin_extra_extra_large"
        android:gravity="start"
        android:hint="@string/password"
        android:importantForAutofill="noExcludeDescendants"
        android:inputType="textPassword"
        android:textAlignment="viewStart"
        app:passwordToggleEnabled="true"
        tools:ignore="UnusedAttribute" />

</LinearLayout>
